added surefire config to prevent permgen oom in site build